[package]
name = "carbon"
version = "0.3.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui_extras = { version = "0.23", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui-phosphor = { path = "./egui-phosphor", features = ["bold"] }
parking_lot = "0.12.1"
serialport = "4.2.2"
tokio-modbus = { path = "./tokio-modbus", features = ["rtu", "sync", "rtu-sync", "tcp-sync"] }
tokio-serial = "5.4.4"
rseip = "0.3.1"
rmodbus = "0.7.6"
epaint = "0.23.0"
rodio = "0.17.3"
actix-web = "4.5.1"
s7 = "0.1.9"
chrono = "0.4.39"
rfd = "0.15.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
